--- a/webconfig/views/stylesheets/main.styl
+++ b/webconfig/views/stylesheets/main.styl
@@ -18,6 +18,8 @@ caption
   padding 10px
 h1
   font 1.5em Georgia, serif
+ul
+  list-style-type none
 form
   margin 20px
   padding 20px
@@ -28,16 +30,17 @@ th
   vertical-align center
   background-color rgb(102, 102, 102)
   color white
-
-ul
+div.container
+  margin 15px
+  height 400px
+  width 1800px
+  background-color white
+div.proxy
   float left
-  height 153px
-  line-height 23px
-  list-style none outside none
-  margin 8px 0 0
-  padding 0
-  position relative
-  text-align left
-  width 266px
+  padding 10px
+  height 400px
+  overflow-y scroll
+  background-color white   
+
 
 
