--- a/webconfig/views/rule/index.ejs
+++ b/webconfig/views/rule/index.ejs
@@ -12,9 +12,10 @@
 <body>
 <h1>Drilling Rules</h1>
 <hr>
+<a href="/">Config Home</a> 
 <form method="post" action="/rule/search" id="form" enctype="application/x-www-form-urlencoded">
  Domain: <input name="domain" id="domain" value="" size="30" type="text">
-<input type="submit" value="Filter">&nbsp;&nbsp;<a href="/rule/new">Add</a><br>
+<input type="submit" value="Filter">&nbsp;&nbsp;<a href="/rule/driller::/edit">Add</a><br>
 </form>
 <hr><br>
 
