--- a/webconfig/views/rule/edit.ejs
+++ b/webconfig/views/rule/edit.ejs
@@ -230,12 +230,12 @@
       </tr>
       <tr>
         <th>Inject jquery</th>
-        <td> <label><input name="inject_jquery" value="Y" type="radio" <%if(rule.inject_jquery === 'Y'){%> checked <%}%> >Yes</label>&nbsp;&nbsp; <label><input name="inject_jquery" value="N" type="radio" <%if(rule.inject_jquery === 'N'){%> checked <%}%>>No</label> 
+        <td> <label><input name="inject_jquery" value="true" type="radio" <%if(rule.inject_jquery === 'true'){%> checked <%}%> >Yes</label>&nbsp;&nbsp; <label><input name="inject_jquery" value="false" type="radio" <%if(rule.inject_jquery === 'false'){%> checked <%}%>>No</label> 
         </td>                
       </tr>  
       <tr>
         <th>Load img</th>
-        <td> <label><input name="load_img" value="Y" type="radio" <%if(rule.load_img === 'Y'){%> checked <%}%> >Yes</label>&nbsp;&nbsp; <label><input name="load_img" value="N" type="radio" <%if(rule.load_img === 'N'){%> checked <%}%>>No</label> 
+        <td> <label><input name="load_img" value="true" type="radio" <%if(rule.load_img === 'true'){%> checked <%}%> >Yes</label>&nbsp;&nbsp; <label><input name="load_img" value="false" type="radio" <%if(rule.load_img === 'false'){%> checked <%}%>>No</label> 
         </td>               
       </tr> 
 
