Task #279 validate the content, retry .

--- a/webconfig/views/rule/edit.ejs
+++ b/webconfig/views/rule/edit.ejs
@@ -270,7 +270,11 @@
           <textarea id="drill_relation" name="drill_relation" cols="130" rows="5"><%=rule.drill_relation%></textarea>
         </div>
         </td>      
-      </tr> 
+      </tr>
+      <tr>
+          <th>Content validation keywords</th>
+          <td><input name="validation_keywords" id="validation_keywords" value="<%=rule.validation_keywords %>" size="150" type="text"></td>
+      </tr>
       <tr>
         <th>script</th>
         <td>
