change: configuration from global setting

--- a/webconfig/views/monitor/index.ejs
+++ b/webconfig/views/monitor/index.ejs
@@ -36,7 +36,8 @@
                 "bProcessing": true,
                 "sAjaxSource": '/monitor/search',
                 "fnServerData": requireData,
-                'autoWidth': false  
+                'autoWidth': false,
+                'iDisplayLength': 50
             });
         });
 
